# clang-format

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
meta-programming/: meta.cpp
sm/: CMakeLists.txt  State.h  StateManager.cpp  StateManager.h
string/: CMakeLists.txt  sz_string.cpp  sz_string.h
string/example/: CMakeLists.txt  test_string.cpp
